<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main_tab_bottom"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:layout_alignParentBottom="true"
    android:background="@color/gray" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp" >

		<LinearLayout
            android:id="@+id/id_tab_bottom_setting"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_setting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_image"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_setting" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_tab_bottom_gesture"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants"
            android:gravity="center"
            android:orientation="vertical" >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gesture_setting" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>